--- a/recipe/android/app/src/main/AndroidManifest.xml
+++ b/recipe/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.recipe">
+    package="com.example.recipes">
    <application
-        android:label="recipe"
+        android:label="recipes"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
