--- a/recipe/web/manifest.json
+++ b/recipe/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "recipe",
-    "short_name": "recipe",
+    "name": "recipes",
+    "short_name": "recipes",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
